fix: fix gap and paddings in actual page

--- a/src/layouts/ActualPagePost/style.scss
+++ b/src/layouts/ActualPagePost/style.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   gap: 5px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .actual-page__post-date {
