--- a/src/pages/Actual/style.scss
+++ b/src/pages/Actual/style.scss
@@ -4,7 +4,7 @@
   flex-flow: column wrap;
   width: 100%;
   min-height: 100vh;
-  padding: 50px 0;
+  padding: 50px 0 30px;
   background: url('../../assets/images/sdu.png') bottom, #2f2f2f fixed repeat;
   background-blend-mode: multiply;
   background-size: contain, cover;
@@ -60,8 +60,8 @@
 
 .actual-page__posts {
   width: 100%;
+  min-width: 800px;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  gap: 10px;
 }
